src/main/java/org/example/breakoutdrop/Errors/ServerHTTP/NotImplemented501.java
package org.example.breakoutdrop.Errors.Server;

public class NotImplemented501 extends RuntimeException {
    public NotImplemented501(String message) {
        super(message);
    }
}
